# rust-l10n

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md
.github/workflows/: ci.yml  release.yml
examples/: basic.rs  modular.rs
src/: lib.rs
tests/: test_mode.rs
